@@ -185,6 +185,7 @@ COM_CONFIG_FTP_DETAILS="FTP Login Details"
 COM_CONFIG_FTP_DETAILS_TIP="For updating your configuration.php file, Joomla! will most likely need your FTP account details. Please enter them in the form fields below."
 COM_CONFIG_FTP_SETTINGS="FTP Settings"
 COM_CONFIG_GLOBAL_CONFIGURATION="Global Configuration"
+COM_CONFIG_HELPREFRESH_BUTTON="Refresh"
 COM_CONFIG_HELPREFRESH_SUCCESS="The Help Sites list has been refreshed."
 COM_CONFIG_LOCATION_SETTINGS="Location Settings"
 COM_CONFIG_MAIL_SETTINGS="Mail Settings"
