@@ -777,3 +777,8 @@ th .tooltip-inner {
 .img-preview > img {
 	max-height: 100%;
 }
+
+/* Help site refresh button*/
+#helpsite-refresh {
+	vertical-align: top;
+}
