@@ -29,6 +29,7 @@ $ -> Language fix or change
  # [#31692] JFormFieldUrl garble HTML with emtpy class. Thanks Anthony THERREAU
  #$ [#31631] Small typo fix in Plugin. Thanks Gunjan Patel
  $ [#31714] Confusing text "search by tag" in the banner module. Thanks Brian Teeman
+ + [#31436] *Create a update button to list new Help servers. Thanks Julien Vonthron
 
 12-Aug-2013 Jean-Marie Simonet
  # [#31703] Fixed BC issue with tooltip/popover being added in wrong place. Thanks Peter Van Westen
